src/app/components/game/game.module.css
.secondRowContainer {
    display: grid;
    grid-template-columns: 255px 100px 255px;
    justify-content: center;
    gap: 0.7rem;
    order: 0;
}

.habitatMap {
    order: 1;
}

/* This removes the outer form element from the layout 
because it was interfering with the positioning of the input element */
.secondRowContainer form {
    display: contents;
}

.mobileSwapContainer {
    display: flex;
    flex-direction: column;
}

.perfectPopup {
  position: fixed;
  top: 20%;
  left: 50%;
  font-size: 2rem;
  font-family: var(--font-monda);
  font-style: italic;
  font-weight: bold;
  color: rgb(243, 216, 64);
  text-shadow: 2px 2px 4px #000;
  background: hsla(0, 10%, 89%, 0.95);
  padding: 2px 13px;
  border-radius: 0.75rem;
  z-index: 1000;
  animation: popupRollIn 0.25s ease-out forwards, popupRollOut 0.25s ease-in 1s forwards;
  white-space: nowrap;
  overflow: hidden;
  text-align: center;
}

.perfectPopup::after {
  content: "";
  position: absolute;
  top: 0;
  left: -40%; 
  width: 40%; 
  height: 100%;
  background: linear-gradient(90deg, transparent, hsla(0, 0%, 100%, 70%), transparent);
  animation: shimmer 1s forwards; 
  animation-delay: 0.25s; 
  animation-iteration-count: 1;
}

@keyframes shimmer {
  0% {
    left: -50%;
  }
  100% {
    left: 100%;
  }
}

@keyframes popupRollIn {
  from {
    transform: translate(-150%, -50%);
    opacity: 0;
  }
  to {
    transform: translate(-50%, -50%);
    opacity: 1;
  }
}

@keyframes popupRollOut {
    from {
        transform: translate(-50%, -50%);
        opacity: 1;
    }
    to {
        transform: translate(50%, -50%);
        opacity: 0;
    }
}

@media (max-width: 695px) {
    .secondRowContainer {
      display: flex;
      flex-direction: column;
      align-items: center;
      order: 1;
    }
    .habitatMap {
      order: 0;
    }

    .perfectPopup {
      text-shadow: 1px 1px 2px #000;
      font-size: 1.7rem;
      top: 24%;
      padding: 1px 8px;
      border-radius: 0.55rem;
    }
}

